Fixed Notifier not showing

--- a/src/main/resources/_notify-styles/notification-styles.css
+++ b/src/main/resources/_notify-styles/notification-styles.css
@@ -141,9 +141,9 @@ $toastNeutral: #7f8cbd;
 .notification-body {
     -f-font-family: "Poppins";
     -fx-pref-width: 346;
-    -fx-pref-height: 40px;
-    -fx-min-height: 40px;
-    -fx-max-height: 60px;
+    -fx-pref-height: 60px;
+    -fx-min-height: 50px;
+    -fx-max-height: 100px;
     -fx-text-fill: #000;
     -fx-focus-color: transparent;
     -fx-faint-focus-color: transparent;
